--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container py-5">
         <div class="row text-center text-white">
             <div class="col-lg-8 mx-auto">
-                <h1 class="display-4 font-weight-bold">EL NOMBRE DEL EQUIPO</h1>
-                <p class="lead mb-0">Este equipo es la mera ****, y estamos conformados por los siguientes changos:</p>
+                <h1 class="display-4 font-weight-bold">Los duendes verdes</h1>
+                <p class="lead mb-0">Somos bien tremendos lol, y desarrollamos a base dec hingazos:</p>
             </div>
         </div>
     </div>
