--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <!-- Aun NO toquen este xd -->
             <div class="bg-white rounded shadow-sm py-5 px-4">
                 <img class="img-fluid" src="https://i.giphy.com/media/OnQqgkPWJ17DG/giphy.webp">
-                <h5>Esta foto es de un perrito que baila</h5>
-                <p>Lo quiero mucho al perrito</p>
-                <p>Baila muy perron</p>
+                <h5>Este perrito se mueve sabroso</h5>
+                <p>Iralo que bonito</p>
+                <p>Baila chido</p>
             </div>
 
         </div>
